[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-mytnb"
version = "0.4.0"
description = "Python library to interface with the myTNB API (Tenaga Nasional Berhad)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
cli = [
    "click>=8.3.3",
    "rich>=15.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pylint>=3.0",
    "ruff>=0.6",
    "click>=8.3.3",
    "rich>=15.0.0",
]

[project.scripts]
mytnb = "mytnb.cli:main"

[project.urls]
Repository = "https://github.com/danieyal/python-mytnb"

[tool.hatch.build.targets.wheel]
packages = ["src/mytnb"]

[tool.pylint.main]
load-plugins = []
jobs = 0

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-locals",
    "line-too-long",
    "fixme",
    "broad-exception-caught",
    "import-error",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "v", "e", "f", "d", "ui", "di"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["mytnb"]
